More getting ahead of myself with testing framework. Moving this to the plugin package has allowed me to use javac directly inside of tests, which was a struggle previously (maybe need to read more documentation on --add-export...), but I have now broken debug stuff by accident as a result.